Fix scrollbar issue #726

--- a/resources/varaa/as/styles/main.less
+++ b/resources/varaa/as/styles/main.less
@@ -7,6 +7,10 @@
 @as_light_red: #ee4a42;
 @as_border_gray: #f0f0f0;
 
+html {
+  overflow-x: hidden!important;
+}
+
 .as-main-nav {
   margin-bottom: 0;
 }
